# mServe-STACK

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  readme.md  transfer.md
.claude/: settings.json
ws/src/hyfleet_booster/: CMakeLists.txt  README.md  package.xml
ws/src/hyfleet_booster/include/hyfleet_booster/: booster_limits.hpp  booster_node.hpp
ws/src/hyfleet_booster/src/: booster_action.cpp  booster_bt_actions.cpp  booster_bt_conditions.cpp  booster_node.cpp  booster_params.cpp  main.cpp
ws/src/hyfleet_booster/src/include/: booster_action.hpp  booster_bt_actions.hpp  booster_bt_conditions.hpp  booster_telemetry_cache.hpp
ws/src/hyfleet_booster/src/trees/: compress_hold_tree.xml  compress_once_tree.xml  compress_tree.xml  start_idle_tree.xml  start_tree.xml  stop_force_tree.xml  stop_tree.xml
ws/src/hyfleet_compression/: CMakeLists.txt  package.xml
ws/src/hyfleet_compression/include/hyfleet_compression/: compression_node.hpp
ws/src/hyfleet_compression/src/: compression_node.cpp  main.cpp
ws/src/hyfleet_compressor/: CMakeLists.txt  README.md  package.xml
ws/src/hyfleet_compressor/docs/: Sim_prompt.md  architecture.md  description.md  todo.md  todo_live_repo.md
ws/src/hyfleet_compressor/include/hyfleet_compressor/: compressor_limits.hpp  compressor_node.hpp
ws/src/hyfleet_compressor/src/: compressor_action.cpp  compressor_bt_nodes.cpp  compressor_node.cpp  compressor_params.cpp  main.cpp
ws/src/hyfleet_compressor/src/include/: compressor_action.hpp  compressor_bt_nodes.hpp  compressor_telemetry_cache.hpp
ws/src/hyfleet_compressor/src/trees/: parallel_high.xml  parallel_low.xml  stop_sync.xml  stop_tree.xml  sync.xml
ws/src/hyfleet_template/: CMakeLists.txt
ws/src/hyfleet_template/src/: subsystem_action.cpp  subsystem_node.cpp  subsystem_params.cpp
ws/src/hyfleet_template/src/trees/: main_tree.xml
ws/src/interfaces/: CMakeLists.txt  README.md  package.xml
ws/src/interfaces/action/: ControlBooster.action
ws/src/interfaces/config/: joystick_params.yaml  mserve_params.yaml  nav2_params.yaml  robot.yaml  slam_params_local.yaml  slam_params_map.yaml  topics.yaml
ws/src/interfaces/msg/: CompressorDiagnostics.msg  CompressorTelemetry.msg  DriveMotorFeedback.msg  DriveStatus.msg  Esp32Status.msg  GasRouterPath.msg  HResult.msg  JoystickStatus.msg  MotorCommand.msg  MotorCommands.msg  MotorState.msg  SensehatStatus.msg  SystemState.msg  WheelCommand.msg
ws/src/interfaces/srv/: BoosterCmd.srv  Cmd.srv  CompressorCmd.srv  DispenserCmd.srv  Drive.srv  GasRouterCmd.srv  SetMode.srv  SetMotorId.srv
ws/src/launch/: CMakeLists.txt  README.md  package.xml
ws/src/launch/launch/: mserve_min.launch.py  mserve_nav2.launch.py  mserve_slam.launch.py
ws/src/launch/test/: test_launch_descriptions.py
ws/src/lifecycle_manager/: CMakeLists.txt  README.md  package.xml
ws/src/lifecycle_manager/docs/: todo.md
ws/src/lifecycle_manager/include/mserve_lifecycle_manager/: lifecycle_manager.hpp
ws/src/lifecycle_manager/src/: lifecycle_manager.cpp  main.cpp
ws/src/mserve_base/: CMakeLists.txt  README.md  package.xml
ws/src/mserve_base/src/: base_bt_nodes.cpp  base_node.cpp  base_node_main.cpp  base_params.cpp  main.cpp
ws/src/mserve_base_archive/: CMakeLists.txt  README.md
ws/src/mserve_base_archive/src/: base_node.cpp
ws/src/mserve_bringup/: CMakeLists.txt  README.md  package.xml
ws/src/mserve_bringup/launch/: mserve_min.launch.py
ws/src/mserve_bringup_bt/: CMakeLists.txt  README.md  lesson_plan.md  todo.md
ws/src/mserve_bringup_bt/src/: main.cpp
ws/src/mserve_camera/: CMakeLists.txt  README.md  package.xml
ws/src/mserve_camera/docs/: todo.md
ws/src/mserve_camera/src/: camera_node.cpp  camera_params.cpp  main.cpp
ws/src/mserve_description/: CMakeLists.txt  README.md  package.xml
ws/src/mserve_description/launch/: mserve_gazebo.launch.py  mserve_rviz.launch.py  mserve_view.launch.py
ws/src/mserve_description/params/: mserve_gazebo_bridge.yaml
ws/src/mserve_description/rviz/: mserve.rviz  mserve_gazebo.rviz
ws/src/mserve_description/test/: test_tf_smoke.py  test_urdf_load.py
ws/src/mserve_description/urdf/: inertial_macros.xacro  mserve.urdf  mserve.urdf.xacro  mserve_camera.xacro  mserve_core.xacro  mserve_depth_camera.xacro  mserve_gazebo.xacro  mserve_lidar.xacro
ws/src/mserve_description/worlds/: basic.sdf  empty.sdf
ws/src/mserve_display/: CMakeLists.txt  README.md  package.xml
ws/src/mserve_display/src/: display_node.cpp  display_params.cpp  framebuffer.cpp  main.cpp  screens.cpp  touch_input.cpp
ws/src/mserve_drivechain/: CMakeLists.txt  README.md  package.xml
ws/src/mserve_drivechain/drive_example/: READMD.md
ws/src/mserve_drivechain/scripts/: uart_diag.py
ws/src/mserve_drivechain/src/: diff_drive.cpp  drivechain_bt_nodes.cpp  drivechain_node.cpp  drivechain_node_main.cpp  drivechain_params.cpp  drivechain_uart.cpp  main.cpp
ws/src/mserve_drivechain/test/: test_diff_drive.cpp  test_packet_codec.cpp
ws/src/mserve_interfaces/: CMakeLists.txt  README.md  package.xml
ws/src/mserve_interfaces/action/: ControlBooster.action  ControlCompressor.action  Dock.action
ws/src/mserve_interfaces/config/: mserve_params.yaml  qos.yaml  topics.yaml
ws/src/mserve_interfaces/msg/: BoosterCmd.msg  CompressorCmd.msg  CompressorTelemetry.msg  DriveStatus.msg
ws/src/mserve_interfaces/srv/: BoosterCmd.srv  CompressorCmd.srv  DriveChainCmd.srv  GasRouterCmd.srv
ws/src/mserve_joystick/: CMakeLists.txt  package.xml
ws/src/mserve_joystick/src/: joystick_node.cpp  joystick_params.cpp  main.cpp
ws/src/mserve_lidar/: CMakeLists.txt  README.md  package.xml
ws/src/mserve_lidar/src/: lidar_node.cpp  lidar_params.cpp  main.cpp
ws/src/mserve_lifecycle_manager/: CMakeLists.txt  README.md  todo.md
ws/src/mserve_lifecycle_manager/docs/: todo.md
ws/src/mserve_lifecycle_manager/src/: lifecycle_manager.cpp  main.cpp
ws/src/mserve_sensehat/: CMakeLists.txt  README.md  package.xml
ws/src/mserve_sensehat/src/: joystick_input.cpp  led_matrix.cpp  main.cpp  sensehat_node.cpp  sensehat_params.cpp
(+218 files in other folders)
