<?xml version="1.0"?>
<package format="3">
  <name>launch</name>
  <version>0.1.0</version>
  <description>Launch and bringup support for the mServe system.</description>
  <maintainer email="ecm@example.com">ecm</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>lifecycle_manager</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!--
    Deliberately NOT declaring an exec_depend on mserve_description, even
    though mserve_min.launch.py uses get_package_share_directory('mserve_description')
    at runtime: this package's name ("launch") collides with the core ROS 2
    launch framework's own package name. mserve_description's package.xml
    declares <exec_depend>launch</exec_depend> (meaning the framework), but
    colcon resolves that ambiguous name to this LOCAL package first — adding
    mserve_description here creates a real dependency cycle
    (launch -> mserve_description -> launch). mserve_description is already
    built ahead of this package via the documented top-level build commands,
    so the runtime lookup still works; this is just about colcon's ordering.

    Same reasoning for NOT declaring slam_toolbox here (used at runtime by
    mserve_slam.launch.py): slam_toolbox's own package.xml has
    <test_depend>launch</test_depend> (meaning the framework), which colcon
    also resolves to this local package first — depending on slam_toolbox
    here creates the identical cycle. slam_toolbox is vendored source
    (ws/src/slam_toolbox/, gitignored — see scripts/run_slam.sh), built
    ahead of this package the same way.
  -->

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
