<?xml version="1.0"?>
<package format="3">
  <name>mserve_base</name>
  <version>0.1.0</version>
  <description>Core drive control package for mServe.</description>
  <maintainer email="ecm@example.com">ecm</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>utils</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>utils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
