<?xml version="1.0"?>
<package format="3">
  <name>mserve_base</name>
  <version>0.1.0</version>
  <description>
    Command arbiter and safety gate for mServe. Subscribes to /cmd_vel, applies
    robot-level speed limits and a dead-man-switch timeout, converts the result
    to per-wheel motor commands via differential-drive kinematics, and forwards
    them to mserve_drivechain's ~/drive service. Owns wheel geometry and
    kinematics — mserve_drivechain stays a pure motor driver.
  </description>
  <maintainer email="cvonayres@fuelcellsystems.co.uk">ecm</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>behaviortree_cpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>lifecycle_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>interfaces</depend>
  <depend>utils</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
