<?xml version="1.0"?>
<package format="3">
  <name>mserve_bringup</name>
  <version>0.1.0</version>
  <description>Launch and bringup support for the mServe system.</description>
  <maintainer email="ecm@example.com">ecm</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
</package>
