<?xml version="1.0"?>
<package format="3">
  <name>mserve_description</name>
  <version>0.1.0</version>
  <description>Robot description and visualization assets for mServe.</description>
  <maintainer email="ecm@example.com">ecm</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
